--- a/State_Finder/src/styles/PropertyDetails.css
+++ b/State_Finder/src/styles/PropertyDetails.css
@@ -1,5 +1,5 @@
 /* ========================================
-   PROPERTY DETAILS PAGE - FIXED
+   PROPERTY DETAILS PAGE
    ======================================== */
 
 .property-details {
