--- a/State_Finder/src/styles/Footer.css
+++ b/State_Finder/src/styles/Footer.css
@@ -1,5 +1,5 @@
 /* ========================================
-   PROPERTYFINDER-STYLE FOOTER
+   EstateFinder-STYLE FOOTER
    ======================================== */
 
 * {
